chore: frontend/.gitignore 최신화 및 빌드 관련 제외 항목 확정

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -10,6 +10,12 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+build
+.react-router
+.cache
+.env
+.env.local
+.env.*.local
 # Local Net/DB
 *.db
 *.db-journal
