--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@base-ui/react": "^1.1.0",
     "@fontsource-variable/inter": "^5.2.8",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
     "@libsql/client": "^0.17.0",
+    "@radix-ui/react-progress": "^1.1.8",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.17",
     "better-auth": "^1.4.12",
