--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.10",
+    "@ai-sdk/openai": "^3.0.12",
+    "@ai-sdk/react": "^3.0.40",
     "@base-ui/react": "^1.1.0",
     "@fontsource-variable/inter": "^5.2.8",
     "@hugeicons/core-free-icons": "^3.1.1",
@@ -18,6 +21,7 @@
     "@radix-ui/react-progress": "^1.1.8",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.17",
+    "ai": "^6.0.38",
     "better-auth": "^1.4.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
