chore(ai): 서버리스 환경을 위한 지식 기반 빌드 타임 자동 생성 시스템 구축
- 빌드 시점에 docs/ 내 마크다운을 하나의 JSON으로 통합하는 스크립트 추가
- AI API에서 파일 시스템 접근 대신 번들링된 JSON을 직접 사용하여 경로 문제 해결
- package.json에 빌드 전 지식 자동 갱신 훅(pre-build hook) 적용
- 배포 환경(Vercel)에서의 지식 누락 문제 근본적 해결

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "react-router build",
+    "dev": "node scripts/generate-knowledge.cjs && vite",
+    "build": "node scripts/generate-knowledge.cjs && react-router build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-knowledge": "node scripts/generate-knowledge.cjs"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.10",
