--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,10 @@
     "luxon": "^3.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.12.0",
     "recharts": "^3.6.0",
+    "remark-gfm": "^4.0.1",
     "shadcn": "^3.6.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
