feat(choonsim): 춘심 성장 모델 통합 및 오라클 감사 시스템 구현
- 춘심 AI-Talk 수익권을 BondBase RWA 모델에 통합하기 위한 기획서 및 로드맵 수립
- 춘심 프로젝트 전용 마일스톤 트래킹 및 수익 수집 Bridge API(api/revenue) 개발
- 글로벌 팬덤 지표와 실시간 IP 매출 흐름을 시각화하는 전용 대시보드 UI 구축
- YieldDistributor 컨트랙트에 오라클 기반 Zero-Trust 감사(Audit) 로직 및 Pending Yield 시스템 도입
- 오라클 검증 시나리오에 대한 통합 테스트(ChoonsimIntegration.test.ts) 수행 및 100% 통과 확인

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,11 @@ yarn-error.log*
 # MacOS
 .DS_Store
 
+# Databases
+*.db
+*.db-journal
+*.db.backup_*
+
 # Blockchain specific
 contracts/artifacts/
 contracts/cache/
