chore(env): .env.example에 RELAYER_PRIVATE_KEY 가이드 추가
- Relayer 온체인 트랜잭션용 환경 변수 가이드 추가
- 테스트넷에서는 Hardhat #0 Account 또는 개인 테스트넷 지갑 사용 권장
- Vercel 프로덕션 환경에서 필수 설정 필요

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,9 @@ BETTER_AUTH_URL=http://localhost:5173
 # --- Database (Turso / Drizzle) ---
 TURSO_DATABASE_URL=file:local.db
 TURSO_AUTH_TOKEN=your_turso_auth_token_here
+
+# --- Relayer (On-chain Transaction) ---
+# Testnet: Use Hardhat #0 Account or your own testnet wallet
+RELAYER_PRIVATE_KEY=0x_your_relayer_private_key_here
+
+
