--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-progress": "^1.1.8",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.17",
+    "@vercel/react-router": "^1.2.5",
     "@vis.gl/react-google-maps": "^1.7.1",
     "ai": "^6.0.38",
     "better-auth": "^1.4.12",
