fix(scripts): 스크립트 환경변수 분리 및 오라클 봇 verifyYield 추가
- simulate-integration.cjs와 oracle-bot.js에 NODE_ENV 기반 환경변수 로드 추가
- 하드코딩된 API_URL, API_KEY를 환경변수로 변경하여 보안 강화
- oracle-bot.js에 verifyYield 호출 추가하여 pendingYield를 실제 분배로 활성화
- 스크립트 로그에서 이모지 제거 및 일관된 포맷 적용
- .env.example에 스크립트 관련 환경변수(SIMULATE_INTERVAL, ORACLE_POLL_INTERVAL) 추가

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,4 +11,14 @@ TURSO_AUTH_TOKEN=your_turso_auth_token_here
 # Testnet: Use Hardhat #0 Account or your own testnet wallet
 RELAYER_PRIVATE_KEY=0x_your_relayer_private_key_here
 
+# --- Choonsim Bridge API Key ---
+# Used by simulate-integration.cjs for revenue simulation
+CHOONSIM_API_KEY=your_choonsim_api_key_here
+
+# --- Script Configuration ---
+# simulate-integration.cjs: Update interval in milliseconds (default: 120000 = 2 minutes)
+SIMULATE_INTERVAL=120000
+# oracle-bot.js: Polling interval in milliseconds (default: 5000 = 5 seconds)
+ORACLE_POLL_INTERVAL=5000
+
 
