feat(oracle): 로컬에서 오라클 실행 스크립트 추가
- package.json에 oracle 스크립트 추가
- npm run oracle으로 로컬에서 실행 가능
- Vercel Cron Jobs 대신 로컬 실행 방식으로 전환
- ORACLE_POLL_INTERVAL 환경 변수로 실행 간격 설정 가능 (기본 5초)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "build": "node scripts/generate-knowledge.cjs && react-router build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-knowledge": "node scripts/generate-knowledge.cjs"
+    "generate-knowledge": "node scripts/generate-knowledge.cjs",
+    "oracle": "node scripts/oracle-bot.js"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.10",
