--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
     "build": "node scripts/generate-knowledge.cjs && react-router build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-knowledge": "node scripts/generate-knowledge.cjs",
-    "oracle": "node scripts/oracle-bot.js"
+    "generate-knowledge": "node scripts/generate-knowledge.cjs"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.10",
