test(frontend): 프론트엔드 테스트 인프라 구축 및 API 라우트 단위 테스트 완료
- Vitest + Testing Library 설정 (react-router 플러그인 충돌 해결)
- api.faucet, api.revenue, api.chat 단위 테스트 26건 작성 및 통과
- BACKLOG: 테스트 인프라 항목 완료 처리

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "build": "node scripts/generate-knowledge.cjs && react-router build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-knowledge": "node scripts/generate-knowledge.cjs"
+    "generate-knowledge": "node scripts/generate-knowledge.cjs",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.10",
@@ -50,6 +53,9 @@
     "@react-router/dev": "^7.12.0",
     "@react-router/fs-routes": "^7.12.0",
     "@react-router/node": "^7.12.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
@@ -59,10 +65,12 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^28.0.0",
     "shadcn": "^3.6.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "vite-tsconfig-paths": "^6.0.4"
+    "vite-tsconfig-paths": "^6.0.4",
+    "vitest": "^4.0.18"
   }
 }
