--- a/relayer/package.json
+++ b/relayer/package.json
@@ -17,6 +17,10 @@
     "ethers": "^6.16.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "zod": "^4.3.6"
   }
 }
