--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@vercel/react-router": "^1.2.5",
     "@vis.gl/react-google-maps": "^1.7.1",
     "ai": "^6.0.38",
+    "@bond-base/types": "*",
     "better-auth": "^1.4.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
