--- a/relayer/package.json
+++ b/relayer/package.json
@@ -21,6 +21,8 @@
     "vitest": "^4.0.18"
   },
   "dependencies": {
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
     "zod": "^4.3.6"
   }
 }
