chore: update .gitignore and untrack local config files per manage-docs skill

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ contracts/cache/
 contracts/typechain-types/
 contracts/coverage/
 contracts/.env
+
+# AI & Agent (Local config)
+.agent/
+.claude/
+.cursor/
+AGENTS.md
+CLAUDE.md
